--- a/config/application.properties
+++ b/config/application.properties
@@ -21,5 +21,5 @@ clientId=<yourClientName>
 #timeseriesZone=1c84e446-aef6-44e9-9c38-f3f3d0b9ff7b
 timeseriesZone=<your Time Series Zone ID>
 #Your Data Ingestion Service URL
-#timeseriesUrl=http://locomotive-dataingestion-service-asha.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
+#timeseriesUrl=https://locomotive-dataingestion-service-asha.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
 timeseriesUrl=<Your Data Ingestion Service URL>/SaveTimeSeriesData
