--- a/src/main/resources/application-clouddev.properties
+++ b/src/main/resources/application-clouddev.properties
@@ -7,19 +7,7 @@ logging.level.com.ge=DEBUG
 
 security.basic.enabled=true
 
-
-#UAA configuration
-#accessTokenEndpointUrl=https://2e93f1db-9f2c-43e9-9fa9-7ba816c8f01c.predix-uaa-training.run.aws-usw02-pr.ice.predix.io/oauth/token
-#clientId=client
-#clientSecret=client
-#predix_oauthRestHost=2e93f1db-9f2c-43e9-9fa9-7ba816c8f01c.predix-uaa-training.run.aws-usw02-pr.ice.predix.io
-#predix_oauthClientId = asha-client:clientsecret
-#predix_oauthGrantType = client_credentials
-clientId=<yourClientName>
-
-#Timeseries configuration
-#timeseriesZone=1c84e446-aef6-44e9-9c38-f3f3d0b9ff7b
-timeseriesZone=<your Time Series Zone ID>
-#Your Data Ingestion Service URL
-#timeseriesUrl=https://locomotive-dataingestion-service-asha.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
-timeseriesUrl=<Your Data Ingestion Service URL>/SaveTimeSeriesData
+#Replace everything below this comment with the contents copied from config.application.properties 
+clientId=client
+timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
+timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
