Edited the configuration files; commented out working credentials and added placeholders for students

--- a/src/main/resources/application-clouddev.properties
+++ b/src/main/resources/application-clouddev.properties
@@ -8,6 +8,9 @@ logging.level.com.ge=DEBUG
 security.basic.enabled=true
 
 #Replace everything below this comment with the contents copied from config.application.properties 
-clientId=client
-timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
-timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
+#clientId=client
+clientId=<YourClientId>
+#timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
+timeseriesZone=<YourTimeseriesZoneId>
+#timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
+timeseriesUrl=<YourDataIngestionURL>/SaveTimeSeriesData
