--- a/config/application.properties
+++ b/config/application.properties
@@ -9,9 +9,9 @@ logging.level.com.ge=DEBUG
 security.basic.enabled=true
 
 #Copy everything below this line to src/main/resources/application-clouddev.properties
-clientId=client
-#clientId=<YourClientId>
-timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
-#timeseriesZone=<YourTimeseriesZoneId>
-timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
-#timeseriesUrl=<YourDataIngestionURL>/SaveTimeSeriesData
+#clientId=client
+clientId=<YourClientId>
+#timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
+timeseriesZone=<YourTimeseriesZoneId>
+#timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
+timeseriesUrl=<YourDataIngestionURL>/SaveTimeSeriesData
