--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: dss-locomotive-simulator-service 
+- name: <yourname>-locomotive-simulator-service 
   path: target/locomotive-data-simulator-1.2.0.jar
 env:
     SPRING_PROFILES_ACTIVE : clouddev
