adding https in two files for cleaning

--- a/config/application.properties
+++ b/config/application.properties
@@ -14,4 +14,4 @@ clientId=<YourClientId>
 #timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
 timeseriesZone=<YourTimeseriesZoneId>
 #timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
-timeseriesUrl=<YourDataIngestionURL>/SaveTimeSeriesData
+timeseriesUrl=https://<YourDataIngestionURL>/SaveTimeSeriesData
