--- a/src/main/resources/application-clouddev.properties
+++ b/src/main/resources/application-clouddev.properties
@@ -9,8 +9,8 @@ security.basic.enabled=true
 
 #Replace everything below this comment with the contents copied from config.application.properties 
 #clientId=client
-clientId=<YourClientId>
+clientId=pxie-client
 #timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
-timeseriesZone=<YourTimeseriesZoneId>
+timeseriesZone=38e954f4-6ad0-4fe2-bdf1-5deb22bf869f
 #timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
-ingestionUrl=https://<YourDataIngestionURL>/SaveTimeSeriesData
+ingestionUrl=https://pxie-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
