--- a/config/application.properties
+++ b/config/application.properties
@@ -10,8 +10,8 @@ security.basic.enabled=true
 
 #Copy everything below this line to src/main/resources/application-clouddev.properties
 #clientId=client
-clientId=<YourClientId>
+clientId=pxie-client
 #timeseriesZone=3bd1a850-c786-46b2-988d-bf47b10d0bac
-timeseriesZone=<YourTimeseriesZoneId>
+timeseriesZone=38e954f4-6ad0-4fe2-bdf1-5deb22bf869f
 #timeseriesUrl=https://dss-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
-ingestionUrl=https://<YourDataIngestionURL>/SaveTimeSeriesData
+ingestionUrl=https://pxie-locomotive-dataingestion-service.run.aws-usw02-pr.ice.predix.io/SaveTimeSeriesData
