--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-- name: <yourname>-locomotive-simulator-service 
+- name: pxie-locomotive-simulator-service
   path: target/locomotive-data-simulator-1.2.0.jar
 env:
     SPRING_PROFILES_ACTIVE : clouddev
